# tv-quotes-api

./: .env.example  .gitignore  .oxfmtrc.json  Cargo.toml  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  package.json  sqlx-data.json  worker-configuration.d.ts  wrangler.jsonc
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: CI.yml
migrations/: 20220506115240_Inital.down.sql  20220506115240_Inital.up.sql
src/: config.rs  index.ts  main.rs  state.rs
src/db/: get_quote_by_id.sql  get_quote_from_show.sql  get_quotes.sql  get_quotes_from_show_short.sql  get_quotes_number.sql  get_quotes_short.sql  get_random_id.sql  get_shows.sql  index.ts  mod.rs  relations.ts  tables.ts
src/db/migrations/20260131182547_cheerful_katie_power/: migration.sql  snapshot.json
src/db/migrations/20260131183544_rebuild_quote_filters_function/: migration.sql  snapshot.json
src/routes/: mod.rs
src/routes/quotes/: mod.rs  quote.rs  shows.rs  stats.rs
src/tests/: mod.rs  quotes.rs  shows.rs  stats.rs
src/tests/db/: reset.sql  seed.json  seed.sql
