[package]
name = "tv-quotes-api"
version = "1.0.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
sqlx = { version = "0.5.13", features = [ "runtime-actix-rustls", "postgres", "json", "macros", "offline" ] }
futures = "0.3.21"
actix-web = "4.0.1"
actix-service = "2.0.2"
actix-http = "3.0.4"
actix-web-prom = "0.6.0"
lazy_static = "1.4.0"
rand = "0.8.5"
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0.57"

[dev-dependencies]
serde_urlencoded = "0.7.1"
